--- a/src/assets/style/client_components/custom.scss
+++ b/src/assets/style/client_components/custom.scss
@@ -2,6 +2,7 @@
 @import "./product.scss";
 @import "./imgContainer.scss";
 @import "./commonIp.scss";
+@import "./cart.scss";
 
 * {
   box-sizing: border-box;
