--- a/src/assets/style/client_components/navbar.scss
+++ b/src/assets/style/client_components/navbar.scss
@@ -26,4 +26,20 @@
   .navbar-text {
     display: flex;
   }
+  #navCart {
+    display: inline-block;
+    position: relative;
+    .cart_qty {
+      position: absolute;
+      right: 0px;
+      top: -7px;
+      width: 25px;
+      height: 25px;
+      border-radius: 50%;
+      background-color: #ffb523;
+      font-size: 18px;
+      color: black;
+      text-align: center;
+    }
+  }
 }
